@startuml Boost Physio Clinic UML Class Diagram

' Skin parameters for better readability
skinparam monochrome true
skinparam classAttributeIconSize 0
skinparam padding 2

' Class Definitions

class Clinic {
  -physiotherapists: List<Physiotherapist>
  -patients: List<Patient>
  -bookings: List<Booking>
  -nextPatientId: int
  -nextAppointmentId: int
  -nextBookingId: int
  +addPatient(name: String, address: String, telephone: String): void
  +removePatient(patientId: int): void
  +bookAppointment(patientId: int, appointmentId: int): boolean
  +changeBooking(bookingId: int, newAppointmentId: int): boolean
  +cancelBooking(bookingId: int): boolean
  +attendBooking(bookingId: int): boolean
  +printReport(): void
  +getPhysiotherapistsByExpertise(expertiseName: String): List<Physiotherapist>
  +findPhysiotherapistByName(name: String): Physiotherapist
  +getAvailableAppointments(p: Physiotherapist): List<Appointment>
}

class Physiotherapist {
  -id: int
  -name: String
  -address: String
  -telephone: String
  -expertiseAreas: List<ExpertiseArea>
  -timetable: List<Appointment>
  +getId(): int
  +getName(): String
  +getExpertiseAreas(): List<ExpertiseArea>
  +getTimetable(): List<Appointment>
  +addAppointment(appointment: Appointment): void
}

class Patient {
  -id: int
  -name: String
  -address: String
  -telephone: String
  +getId(): int
  +getName(): String
}

class Appointment {
  -id: int
  -physiotherapist: Physiotherapist
  -treatmentType: TreatmentType
  -startTime: LocalDateTime
  -booking: Booking
  +getId(): int
  +getPhysiotherapist(): Physiotherapist
  +getTreatmentType(): TreatmentType
  +getStartTime(): LocalDateTime
  +getBooking(): Booking
  +setBooking(booking: Booking): void
  +isAvailable(): boolean
}

class Booking {
  -id: int
  -patient: Patient
  -appointment: Appointment
  -status: String
  +getId(): int
  +getPatient(): Patient
  +getAppointment(): Appointment
  +getStatus(): String
  +setStatus(status: String): void
  +setAppointment(appointment: Appointment): void
}

class ExpertiseArea {
  -name: String
  +getName(): String
}

class TreatmentType {
  -name: String
  -expertiseArea: ExpertiseArea
  +getName(): String
  +getExpertiseArea(): ExpertiseArea
}

' Relationships

' Clinic relationships
Clinic "1" -- "0.*" Physiotherapist : manages
Clinic "1" -- "0.*" Patient : manages
Clinic "1" -- "0.*" Booking : manages

' Physiotherapist relationships
Physiotherapist "1" -- "0.*" ExpertiseArea : specializes in
Physiotherapist "1" -- "0.*" Appointment : offers

' Appointment relationships
Appointment "1" -- "1" Physiotherapist : offered by
Appointment "1" -- "1" TreatmentType : involves
Appointment "1" -- "0..1" Booking : reserved by

' Booking relationships
Booking "1" -- "1" Patient : made by
Booking "1" -- "1" Appointment : reserves

' TreatmentType relationship
TreatmentType "1" -- "1" ExpertiseArea : belongs to

' Notes for clarity
note right of Appointment: booking is null if appointment is available
note right of Booking: status can be "booked", "attended", or "canceled"

@enduml